QListWidget: setup connections when changing selection model.

QListWidget uses a set of slots for its selection model that are
connected only at creation time. This patch adds the missing
connections cleanup and setup when a user changes the selection
model.

Task-number: QTBUG-50891
Change-Id: I942bae6c471ea1ae22637d09b96d6fbd422f653f
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>

cregit: 6129aade0018437d8d65a0051040d7100c8ec681 https://github.com/qt/qtbase/commit/6129aade0018437d8d65a0051040d7100c8ec681